# NAL-Project

./: .gitignore  CHANGELOG.md  LICENSE  README.md  nativelit.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: nativelit-0.1.0.0-inplace.conf  package.cache
src/NativeLit/: Database.hs  Render.hs  Search.hs  Storage.hs  Types.hs
test/: Main.hs
