cabal-version:      3.4
name:               nativelit
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaiah James
maintainer:         IsaiahTJames@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:
        NativeLit.Types
        NativeLit.Database
        NativeLit.Search
        NativeLit.Render
    build-depends:
        base ^>=4.18.3.0,
        containers,
        text
    hs-source-dirs:   src
    default-language: Haskell2010

executable nativelit
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        nativelit
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite nativelit-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        nativelit